--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/txyzum203/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/txyzum203/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772655.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/photo_2020-01-06_22-34-13-600x400-1-320x200.jpg">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772774.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/11-320x200.gif">疑遭导师压榨 南邮研究生自焚亡 消息被封</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772655.md#1">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772779.md#1">【直播预告】民进党立委候选人吴怡农记者会</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772668.md#1">赴港内地女子疑患肺炎拒隔离 自行出院失踪</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772623.md#1">武汉网友爆2位家人患不明肺炎 器官衰竭</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771937.md#1">香港医生议员质疑港府对武汉肺炎反应慢</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771590.md#1">神韵亚特兰大再爆满加座 精英感佩不已</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770327.md#1">北大学者揭大陆股市真相：70%散户赔钱</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771915.md#1">擅长猎杀敌军首脑 美特种部队被派往中东</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772407.md#1">2019年来台旅客达1184万人次 历史新高</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772600.md#1">中企行贿案 日本议员承认收取“选举经费”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772269.md#1">被埋37天 广州地陷埋3人仅搜出1人遗体</a><br>
@@ -92,7 +92,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,373,814 人
+- 共 349,373,972 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
