--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766999.md#1" target="_blank">中共警察强制中小学男生抽血 建DNA数据库</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11766999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-454237724-1-700x420-600x400-150x120.jpg" align ="left"></a>中共正在设立全球最大的DNA数据库，此举引发争议。近期，中共警方在未通知家长的情况下，广西多个城市强行抽取中小学男生的血液样本，引起家长忧虑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767049.md#1" target="_blank">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-509525684-150x120.jpg" align ="left"></a>被美军无人机击毙的伊朗将军卡西姆·索莱马尼（Qassim Soleimani）被称为美国最邪恶的对手，很多人不知道，这位伊朗政权二号人物的真实身份是恐怖组织头子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank">蒋经国一生反共信念的历程</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020010021-150x120.png" align ="left"></a>蒋经国先生是中华民国第6、7任总统，也是国际知名的政治领袖。曾有民调统计，有超过半数的台湾人民认为他是最受到怀念，也是对台湾贡献最大的总统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767045.md#1" target="_blank">陕西前书记赵正永被审查 通报措辞极严厉</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/377162-2-600x400-150x120.jpg" align ="left"></a>今天（1月4日），中共全国人大前内务司法委员会副主任委员、陕西省委前书记赵正永“严重违纪违法”被立案审查调查。中共官方通报措辞极严厉，指赵对“中央决策阳奉阴违、培植个人势力、搞团团伙伙”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768650.md#1" target="_blank">珠海发生3.5级地震 香港多区市民被震醒</a><br></h3>1月5日早晨，广东省珠海市香洲区，发生3.5级地震。香港、澳门均有震感，香港多区市民表示震感明显，有人被震醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11768659.md#1" target="_blank">每日三退声明精选（2020/01/04）</a><br></h3>这里是被中共统治的中国。这个党告诉世人，他是真理的惟一标准，他是中国的救星，人民的领导者...... 但是他不是伟大的上帝，而是一个以一个个谎言荼毒像你一像天真可爱的孩子的骗子，以一场场血腥暴力摧毁每一个中国人的生命的匪帮。 孩子，对不起，我们没能让你迁离这片多灾多难的土地，没能让你在理想的环境下生活。我们十多年前也没看清中共邪恶的一面，加入了中共党团队，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
 
