--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/22/n11738880.md#1" target="_blank">中国高校号召带留学生一对一回家过年 惹议</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/22/n11738880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-1-150x120.gif" align ="left"></a>近日，有网民发表微博爆料，某高校推出了“带留学生回家过年”活动，本着自愿的原则，结成“一对一”伙伴。这一做法引发网民争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 4:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/17/n11661844.md#1" target="_blank">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/17/n11661844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Capture-8-150x120.jpg" align ="left"></a>是何种世界观令有些人说川普总统关于国会议员康明斯（Eljiah Cummings）与巴尔的摩市的推文“带有种族主义”？他们为什么淡化了川普推文中描述的一些事实？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank">民主党弹劾川普 或反助其成功连任</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/9A6A7260_e-150x120.jpg" align ="left"></a>美国股市上周不受众议院通过弹劾川普（特朗普）总统案的影响，三大股指气势如虹，市场人士普遍认为川普连任总统几无悬念。美国选民为何再给川普主掌白宫的机会？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank">陆童星培训藏陷阱 试镜背后是数万培训费</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-494964966-150x120.jpg" align ="left"></a>“15万就白扔了，这件事情绝对是我这辈子办得最憋屈、最丢脸的事情了。”安安妈妈一提起在女儿小时候偶遇“星探”，进而交培训费的经历，就懊悔不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11746220.md#1" target="_blank">湖北一女婴被丢垃圾桶4小时 仍无父母下落</a><br></h3>近日，湖北黄石市一名刚出生不久的女婴，被父母遗弃在垃圾桶内4个多小时，后被环卫工人发现、并送院抢救。但目前仍未找到其父母。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 2:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/25/n11744043.md#1" target="_blank">每日三退声明精选（2019/12/24）</a><br></h3>出国旅游，国外的民主自由，中国的欺骗谎言，形成鲜明对比，声明退出少先队、共青团、共产党一切组织，不做它的牺牲品！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/25/n11744025.md#1" target="_blank">每日三退声明精选（2019/12/23）</a><br></h3>我从国内大量反人性的现实中认识到，无神论罪大恶极，中共才是最大的邪教，我声明自愿退出曾经入过的少先队，与之彻底决裂，争取光明的未来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:28 AM							</td></tr>
