--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -17,31 +17,15 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank">洪微：2020中国人最期待的预言</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/512020308481671-150x120.jpg" align ="left"></a>预言，是对未来将发生的事情，所做出的预报或者断言，通常，是具有非凡预知超能力的人，通过神力或者非凡的能力，对未来即将出现事实的宣布。预言，也通常与所谓的现代科学规律相悖，或者不符合所谓的逻辑推断。所以，很多人不相信预言，即使真的应验，也被认为是巧合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748135.md#1" target="_blank">廖祖笙：党天下法治和德治皆为无本之木</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506272237202039-150x120.jpg" align ="left"></a>习近平先生，你说“我们要坚持把依法治国和以德治国结合起来”，这说明你也意识到了法治和德治的重要性，说明庙堂之上也了然治下已是黑地昏天，国已不国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748133.md#1" target="_blank">陈思敏：向日本国会议员行贿的中企有何背景</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11748133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/610091035481369-600x400-150x120.jpg" align ="left"></a>这几天日本媒体的头条新闻是现任国会议员“秋元司”在25日被捕，据报导，这是日本近10年来首次逮捕国会议员，秋元司是日本赌场政策的负责人，涉嫌收受中国博彩业者的贿赂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:36 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752359.md#1" target="_blank">金浴凤：末日叹</a><br></h3>旷日贸易战，土共忒心烦
-梦里惊香港，醒来愁台湾
-支部牛毛多，专职吃闲饭
-五毛空呐喊，网军删挥汗
-外企加速逃，外汇日渐干
-滚滚三退潮，寂寂党机关
-权贵移民欢，干部撞钟懒
-猪瘟久肆虐，地震晃不断
-三日天上灿，九州地火燃
-红楼痴迷汉，独把黄昏看......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752348.md#1" target="_blank">云鹤天：《忆秦娥?娄山关》新解</a><br></h3>狂风烈，
-腥风血雨香江夜。
-香江夜，
-铁蹄声碎，
-江河呜咽。
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank">周晓辉： 川习再次会面与英国预言家的预言</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_145654088_Subscription_L-600x400-1-150x120.jpg" align ="left"></a>12月24日耶诞节的前一天，美国总统川普（特朗普）在佛州海湖庄园通过视频向美军官兵祝贺节日后，有记者问他是否会与习近平举行仪式签署美中贸易协定。川普回应道：“是的，我们将会有签字仪式。”“最终我们会见面，而且会有一个更快的签字，因为我们希望完成它（协议）。协议已经达成了，现在正在翻译。”
 
-红魔赤鬼冷如铁，
-公安武警开杀戒。
-开杀戒，
-怒潮如海，
-心在流血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752328.md#1" target="_blank">海网：户口松绑之来龙去脉</a><br></h3>户口松绑策，自吹新改革。实乃无奈举，末日苟延辙。
-别的先不扯，先说最直接。城镇多鬼城，韭菜园散零。
-并村撤乡镇，又松户籍绳。空房罗雀筐，楼盘韭菜场。
-维稳需集中，松绑紧围墙。去脉由来龙，回首百年清。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:42 PM			</td></tr>
+川普没有说明他将与习近平.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:53 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11745899.md#1" target="_blank">美国故事：阶前万里 古罗马文明在北美</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11745899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-91459118-1-150x120.jpg" align ="left"></a>美国总统川普不久前说：美国和意大利享有共同的文化和政治遗产，可追溯到几千年前的古罗马。意大利人以其宏伟的艺术、科学、哲学、建筑和音乐作品，创造和保存了我们的文明。美国和意大利从这份文化遗产中汲取力量。美国成立于1776年，古罗马帝国始于公元前753年，从文化本源上讲，美国文明是古罗马文明的继承。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:36 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747262.md#1" target="_blank">任重：中共外汇告急 民间资本加速外逃</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/26/n11747262.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-01-600x400-150x120.jpg" align ="left"></a>最近， 大陆民众纷纷赶在年底之前，到银行购买政府限定的每人每年的5万美元（或等值外币），并且想尽办法汇往国外，或者携带出境，或者提出美元现金。
+
+然而，民众的合法愿望却不能顺利实现。因为各家银行都有各自的套路为民众换外汇设坎，下面以全国外汇管制最宽松的北京为例，看看这些坎。
+
+第一道坎，银行尽量阻止民众购买外汇.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752305.md#1" target="_blank">云鹤天：十六字令?中共在二零一九</a><br></h3>难，
 游走钢丝又一年，
 平衡失，
