--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773235.md#1">【谈股论金】川普“以战止战”非长期利空</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773166.md#1">项云：无视人性准则是中共党性决定的</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772976.md#1">林辉：中共当年盘剥延安人 被骂很“黑”</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772316.md#1">陈思敏：中共开年“抢钱” 通膨飙升民生苦</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770624.md#1">东方觉：六岁孩子走六万步上学，令人心痛心酸</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770319.md#1">王友群：挪威图书馆风波背后的真相</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770143.md#1">周晓辉：美清除伊朗二号人物 中朝为何“认怂”？</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/5/n11770081.md#1">杜彼得：登高皋以舒啸 临清流而赋诗</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,9 +30,9 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772547.md#1">中共奥威尔式维稳 学者：今年只能往下走</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772388.md#1">逃台香港示威者：韩国瑜若当选 或被迫离开</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773167.md#1">大陆高校强化政治课 学生考不过不让毕业</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772547.md#1">中共奥威尔式维稳 学者：今年只能往下走</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772898.md#1">为华为生产产品 航天科工旗下企业违约45亿</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772347.md#1">一本“千古奇书” 结缘世界各族裔亿万人</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772974.md#1">【新闻看点】武汉肺炎蔓延 真正可怕的未排除</a><br>
