--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730929.md#1" target="_blank">新歌《老友记》述生存状态 李荣浩喟叹友情难</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730929.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909090301321487-150x120.jpg" align ="left"></a>18日，大陆歌手李荣浩第六张创作专辑的第二主打歌《老友记》官宣，将于12月21日零点正式登陆各大音乐平台。歌中描述了现代人的生存状态，并喟叹：每个人心中都有一个很重要的朋友，但也往往被这样的朋友伤害；而许多人用尽一生结交一位推心置腹的朋友，却只有极少数能走到最后。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 6:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730692.md#1" target="_blank">台首场总统政见发表 蓝绿激烈交锋</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11730692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/978ca020c59573ce2f9a8cdd47040e86-150x120.jpg" align ="left"></a>2020台湾总统选举首场政见发表会18日在华视登场，国民党、民进党、亲民党三组候选人首度同台讲述政见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank">河北蠡县三任派出所所长壮年暴死</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg" align ="left"></a>自1999到2011年，河北省蠡县鲍墟乡有三任派出所所长，外加一个副乡长壮年暴死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11729821.md#1" target="_blank">湖南新晃校园埋尸案 主犯杜少平被判死刑</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/18/n11729821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/3-1-150x120.png" align ="left"></a>12月17日、18日，湖南新晃县一中操场埋尸案公开庭审。18日消息，嫌疑人杜少平，犯故意杀人等罪，被判处死刑，罚款50万元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/22/n11737991.md#1" target="_blank">每日三退声明精选（2019/12/21）</a><br></h3>我因为在去年P2P的金融灾难中，已经倾家荡产，无法生活。那位诈骗犯逃到美国一年多了，我们向各级政府反映问题，要求惩办诈骗犯。结果政府和黑警却抓捕、殴打、恐吓、关押维权的受害者，我们过着生不如死的日子，天下之大怎么就没有说理的地方呢？在反思过程中终于醒悟，我们全国3.2亿的金融灾民被诈骗的原因就是我们太相信政府和大裤衩的新闻，以至于我们误判了国内的经济状况，其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/21/n11736910.md#1" target="_blank">工作人员在陕西兵马俑坑内洒水引网友热议</a><br></h3>近日,大陆网络上流传出多名工作人员在陕西秦始皇兵马俑景区内洒水，许多网友质疑是破坏文物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/20/n11735959.md#1" target="_blank">社交名媛张瀞仁猝逝 刘嘉玲安以轩发文悼念</a><br></h3>活跃于大陆社交圈的名媛张瀞仁，惊传12月20日凌晨在日本北海道猝逝。今年53岁的她，是“台聚集团”的少奶奶，经常出席各种时尚活动，与演艺圈许多明星关系匪浅，就连微博名“上海吴太”也是刘嘉玲帮取名。噩耗传来，刘嘉玲、安以轩等圈内好友纷纷发文悼念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/20/n11734452.md#1" target="_blank">每日三退声明精选（2019/12/19）</a><br></h3>本人刘清甄，在职高校教师。起初我为了教书育人进入大学传道授业，但在学校中被迫给杀人无数的匪共做宣传，逐渐看清了匪共的本质。今年六月以来，我实在受不了被上级要求抹黑香港民主运动的指示，遂在此宣布退出加入过的少先队、共青团和共产党，与邪恶的匪共彻底划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:22 PM							</td></tr>
