--- a/gb/ncid281_5.md
+++ b/gb/ncid281_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/6/24/n11342013.md#1" target="_blank">中共停考四门美国大学预修课 专家分析原因</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/6/24/n11342013.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/704280542481151-1-150x120.jpg" align ="left"></a>美国大学预修课程（Advanced Placement，AP）中国考试信息网日前发布通知称，自2020年起，考试机构将暂停在中国大陆考点的开放考点举行美国历史、世界历史、欧洲历史、人文地理等四门AP科目的考试。那么，中共为何停考四门美国大学预修课？
 
 路透社报导表示，设在北京、上海、南京和广州的考试中心已接到中共教育部的指令，将在明年暂停这些科目的考试.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 2:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank">英语外教在中国面临困境</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/c4ffdfeef384a263edbe9c5bdcd712f6-150x120.jpg" align ="left"></a>来自西雅图的美国律师丹·哈里斯发表博客文章，建议外籍教师不要去中国教英文。外教在中国生存状况是否面临困境？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 1:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/15/n11454086.md#1" target="_blank">中国大陆电影人移民加拿大为何被拒？</a><br></h3>中国大陆影视圈的千万富翁卫先生多次来加拿大旅游后，爱上这个国家，并决定移民加拿大。他以自雇人士（Self-employed）的身份递交移民申请，但很不顺利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 12:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/13/n11449886.md#1" target="_blank">吃了一盘黑木耳 杭州男子失去意识进ICU</a><br></h3>上月底，浙江杭州40多岁的张先生被送往医院。经检查，他的肝、肾功能衰竭，有严重凝血功能障碍。医生表示，张先生是吃了隔夜的黑木耳导致的米酵酸菌中毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 3:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/7/22/n11401219.md#1" target="_blank">中共新疆白皮书被批用谎言编造历史</a><br></h3>继近期国际社会严厉批评中共新疆政策后，中共当局21日发布《新疆的若干历史问题》白皮书进行诡辩，随后遭到“世界维吾尔代表大会”炮轰。另有媒体披露，中共还删除了小学教科书中关于新疆维吾尔人等文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
