--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11758562.md#1" target="_blank">许其正：渔夫</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11758562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/09/1209090756031758-150x120.jpg" align ="left"></a> 百炼成钢。要造就一块好的钢，必须经过许多锤打和凝炼。  成功不能幸致。做一个好渔夫，不是容易的。风雨、烈阳、惊涛骇浪和终年枯寂的海上生活......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/30/n11691870.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令与节庆</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/30/n11691870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/644e8126b9f449c89f91086b0023c0b1-150x120.jpg" align ="left"></a>欢迎来到馨香雅句，我是雅兰，上次我们讲到月令中，从天子到百姓依照天时安排一年的政令，那么中国历法中还有一个对人们生活很重要的影响，那就是节庆活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11758591.md#1" target="_blank">麦立：眼神</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/31/n11758591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/mily-0101-150x120.jpg" align ="left"></a> 什么最昏沉 眼神 当被遮蔽时 是心昏沉了  什么最锐利 眼神 当很用心时......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:10 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/24/n11743094.md#1" target="_blank">【品读唐诗】一首创造汉语词汇的诗</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/24/n11743094.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/download-150x120.png" align ="left"></a>结束了一天的工作劳碌，晚上的时间才是属于我们自己的。夜深人静时，您喜欢做些什么呢？是听一支轻音乐，读一本古典名著，还是为家人做一些手工，增添生活的乐趣呢？在唐朝的某一个深夜，一个穿着僧袍的诗人，选择做了这样一件小事，不仅创作出一首名诗，还成就了一段千古流传的佳话呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 7:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11765966.md#1" target="_blank">歌词：山依依，水依依</a><br></h3> 山依依，水依依， 小雨叫醒春天的小溪。 爷爷穿着他爷爷留下的蓑衣， 守望着古老的河川， 用绿色勾勒出一片生机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 10:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/1/n11761463.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
 研究犹太文化可以激醒浅睡中的“磁气文化 ”——中国文化中的“金神文化”（2-2）
 上篇文章介绍中，提到中国民族事实上仅差一步之遥，实际是地表上的稀有的磁“气”超强民族，而不是外国人称的轻击可碎的磁“器”民族。两者相距太远了！ 不是万里之遥！
