--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -23,8 +23,14 @@
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766347.md#1" target="_blank">《亚洲周刊》捧港警 作家董启章羞与为伍</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1911120304312188-600x400-150x120.jpg" align ="left"></a>《亚洲周刊》近日推崇备受港人唾弃、全球谴责的香港警队为2019年度风云人物。香港作家董启章在脸书发帖，批评该杂志已沦为宣传机器，并拒绝其作品《命子》入选同列该周刊的2019十大小说榜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank">凑成好字 40岁章子怡宣布新年二胎产子</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/VCG111175203321_meitu_1-150x120.jpg" align ="left"></a>此前在美国待产的大陆女星章子怡，1月3日在微博发文晒照，宣布二胎产子：“2020年1月1日，我们的生命中多了一个他，从此我们的世界又多了一份幸福的牵挂！这是上天赐予我们的最美新年礼物，感恩！新年真好！祝福大家新年快乐！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766060.md#1" target="_blank">【新闻看点】教唆港警使阴招？北京陷两难</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_12-55-03-150x120.jpg" align ="left"></a>越来越多的迹象表明，香港警察为了实施镇压，正在频频使用阴招，他们的行为无愧于“2019年度可耻人物”排名第二和“魔警”的称号。不过香港警察的所作所为，却在折射着北京当局的骑虎难下、左右为难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766320.md#1" target="_blank">武汉萨斯疑云扩大 专家质疑当局隐瞒疫情</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-144530355-150x120.jpg" align ="left"></a>武汉2019年12月31日爆出不明肺炎疫情，短短几天内暴增至44例。且截止目前香港已接受5宗从武汉回港的相关病例个案，5人均表示未到过华南海鲜市场。然而当局至今仍未公布病原及感染途径，专家质疑当局隐瞒疫情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766254.md#1" target="_blank">【新闻看点】武汉肺炎是SARS？官抓人 民恐慌</a><br></h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20191231PHO0181l-150x120.jpg" align ="left"></a>武汉爆发不明肺炎，民众恐慌，但是中共官方一直没有公布确切病源，与此同时，8个转发信息的网民却被警方以散布谣言带走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
+
+据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
+
+视频传出后，许多家长均反映自己的小孩曾遭老师暴力对待。目前，该幼师已被警方带走调查。
+
+责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/3/n11766694.md#1" target="_blank">【翻墙必看】中共官员自相残杀的背后</a><br></h3>可以肯定的说，只要共产党存在一天，中共从高层到底层官员的自相残杀就不会中止，因为除了他们脑中被灌输的斗争哲学外，更与共产一党专制对暴力格外的推崇有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767498.md#1" target="_blank">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br></h3>湖北武汉市不明原因肺炎（外界怀疑SARS疫情）风波在当局的封锁隐瞒下，内地一片“风平浪静”，香港则已启动严重应变级别，香港专家称有充分理由相信当地已发生怀疑人传人情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767423.md#1" target="_blank">大批明星搭机资料遭国航员工泄露</a><br></h3>日前，中国国际航空公司证实有员工外泄数位明星的飞行纪录。目前，该员工已被做出停飞处分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767304.md#1" target="_blank">赵正永的大管家 陕西前副省长陈国强被双开</a><br></h3>1月4日，中共陕西省政府前党组成员、副省长陈国强“严重违纪违法问题”被立案审查调查及被双开。陈国强被指是陕西前书记赵正永的“大管家”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 2:30 PM							</td></tr>
