--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773529.md#1">【拍案惊奇】什么是左胶？其类型和对社会影响</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773529.md#1">【拍案惊奇】什么是左胶？ 对社会有何影响</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773877.md#1">【翻墙必看】骆惠宁见记者 腿不停颤抖</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773417.md#1">【独家】专访郑文杰：屈服中共将后悔一生（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772779.md#1">【直播回放】民进党立委候选人吴怡农记者会</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,390,917 人
+- 共 349,392,907 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
