--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播回放】逾103万港人元旦大游行</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11774165.md#1">袁斌：中国历史老师特有的困境和耻辱</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773537.md#1">向真：好人无辜被杀 恶徒猖狂难久</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773398.md#1">王友群：苏莱曼尼被斩首中共将如何动作</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773300.md#1">文静：并非“上面政策是好的，下面执行搞坏了”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772102.md#1">金言：展望2020 中国经济从暴富到暴雷</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11771284.md#1">美国故事：平民外交绘出一道风景线</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770856.md#1">【名家专栏】美国应实行全国选民身份证吗？</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11770894.md#1">袁斌：中共删帖封号有多疯狂？</a><br>
 <br><p><a href="https://github.com/txyzum203/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -42,10 +42,10 @@
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772547.md#1">中共奥威尔式维稳 学者：今年只能往下走</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11772388.md#1">逃台香港抗争者：韩国瑜若当选 或被迫离开</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773167.md#1">大陆高校强化政治课 学生考不过不让毕业</a><br>
+<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773085.md#1">【揭秘】中共如何利用捷克首富打造形象</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773698.md#1">涉权钱交易及淫乱 长城资产前高管被双开</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773607.md#1">北林大9名女学生死亡车祸案 司机被判死刑</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773600.md#1">组图：北京降大雪 逾百航班被取消</a><br>
-<a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/6/n11773085.md#1">【揭秘】中共如何利用捷克首富打造形象</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773386.md#1">大陆多地现共享汽车“坟场”疑为骗补贴</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773570.md#1">受降雪等影响 大陆8省逾百条高速路封闭</a><br>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/20/1/7/n11773543.md#1">前河南政法委书记吴天君之子获刑二年</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/txyzum203/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,392,907 人
+- 共 349,396,673 人
 ```
 </strong>
 <a href="https://github.com/txyzum203/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
